[gd_scene load_steps=16 format=2]

[ext_resource path="res://levels/Anxiety-3.gd" type="Script" id=1]
[ext_resource path="res://assets/images/blue.png" type="Texture" id=2]
[ext_resource path="res://objects/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/DefaultObstacle.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/FakeObstacle.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/Key.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/qubodup-DoorOpen06.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/qubodup-DoorClose06.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/Picked Coin Echo.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/audio/Fear.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/fonts/CrayonHandRegular2016Demo.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/images/key.png" type="Texture" id=12]
[ext_resource path="res://player/Player1.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 11 )

[node name="Anxiety" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 740.029, 537.872 )
scale = Vector2( 2907.62, 1553.33 )
texture = ExtResource( 2 )

[node name="Door" parent="." instance=ExtResource( 3 )]
position = Vector2( 1813.76, 838.82 )

[node name="Obstacles" type="Node" parent="."]

[node name="Floor" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 942.108, 1030.66 )
scale = Vector2( 2000, 150 )

[node name="Wall1" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( -54.7673, 110.626 )
scale = Vector2( 100, 2000 )

[node name="Wall2" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 1975.3, 106.057 )
scale = Vector2( 100, 2000 )

[node name="Floor2" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 69.3939, 636.501 )
rotation = 0.174533
scale = Vector2( 400, 50 )

[node name="Floor3" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 676.937, 656.427 )
scale = Vector2( 400, 50 )

[node name="Floor4" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 1749.51, 670 )
scale = Vector2( 400, 50 )

[node name="Floor5" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 704.365, 374.518 )
scale = Vector2( 800, 50 )

[node name="Floor11" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 1298.29, 510.05 )
rotation = 0.349066
scale = Vector2( 800, 50 )

[node name="Floor6" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 548.351, 833.073 )
rotation = -0.349066
scale = Vector2( 50, 400 )

[node name="Floor7" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 1085.96, 689.557 )
rotation = -0.174533
scale = Vector2( 50, 800 )

[node name="Floor8" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 1322.79, 809.339 )
rotation = 0.139626
scale = Vector2( 50, 400 )

[node name="Floor12" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 1671.4, 174.112 )
rotation = -0.523599
scale = Vector2( 50, 400 )

[node name="Floor13" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 1553.4, 121.112 )
rotation = 1.0472
scale = Vector2( 50, 400 )

[node name="Floor9" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 1634.82, 837.978 )
rotation = 0.174533
scale = Vector2( 50, 400 )

[node name="Floor10" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 396.158, 172.942 )
rotation = 0.349066
scale = Vector2( 50, 400 )

[node name="FakeObstacle4" parent="Obstacles" instance=ExtResource( 5 )]
position = Vector2( 1937.88, 36.0679 )
scale = Vector2( 450, 100 )

[node name="FakeObstacle5" parent="Obstacles" instance=ExtResource( 5 )]
position = Vector2( 182.934, 44.5117 )
scale = Vector2( 550, 100 )

[node name="Keys" type="Node" parent="."]

[node name="Key1" parent="Keys" groups=[
"key",
] instance=ExtResource( 6 )]
position = Vector2( 679.075, 782.911 )

[node name="Key2" parent="Keys" groups=[
"key",
] instance=ExtResource( 6 )]
position = Vector2( 1755.01, 536.746 )

[node name="Key3" parent="Keys" groups=[
"key",
] instance=ExtResource( 6 )]
position = Vector2( 1473.78, 820.768 )

[node name="DoorSoundOpen" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="DoorSoundClose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="BackgroundSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0
autoplay = true

[node name="Hint" type="Label" parent="."]
margin_left = 536.624
margin_top = 20.0
margin_right = 1333.62
margin_bottom = 105.0
rect_pivot_offset = Vector2( -1406.62, 650 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Se ficar muito complicado, tenha paciÃªncia
e resolva uma coisa de cada vez"

[node name="Hint2" type="Label" parent="."]
visible = false
margin_left = 634.18
margin_top = 426.636
margin_right = 1236.18
margin_bottom = 511.636
rect_pivot_offset = Vector2( -1406.62, 650 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "No final vai ver que era muito
mais simples do que imaginava."

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LabelTitle" type="Label" parent="CanvasLayer"]
margin_left = 11.0034
margin_top = 7.5622
margin_right = 272.003
margin_bottom = 72.5623
custom_fonts/font = SubResource( 2 )
text = "Ansiedade - 3"

[node name="LabelKeys" type="Label" parent="CanvasLayer"]
margin_left = 1800.62
margin_top = 9.53419
margin_right = 1927.62
margin_bottom = 74.5345
custom_fonts/font = SubResource( 2 )
text = "0/3"

[node name="key" type="Sprite" parent="CanvasLayer/LabelKeys"]
position = Vector2( -34.5183, 28.6721 )
scale = Vector2( 4, 4 )
texture = ExtResource( 12 )

[node name="Player" parent="CanvasLayer" groups=[
"player",
] instance=ExtResource( 13 )]
position = Vector2( 129.77, 822.832 )
scale = Vector2( 4, 4 )
